pxc/tests/test_165_distinctint/ei2.px
public namespace ei2 "use-unsafe";
public import core::common -;

struct foo { }

{
  distinct_int{int, foo} x = 15;
  x += 3;
  int y = 111;
  x += y; // error: cannot convert
  println(x);
}
